@@ -52,7 +52,7 @@ public abstract class AbstractFixedLengthInterpreter<V extends Value>
     protected abstract V interpret(Binary binary, long position);
 
     @Override
-    public V interpret(Binary binary, long position, long length) {
+    public final V interpret(Binary binary, long position, long length) {
         if (length != valueLength) {
             throw new IllegalArgumentException("Only supports values of length " + valueLength
                     + " but got " + length);
